# cipherscope

./: AGENTS.md  BENCHMARK.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  GROUND_TRUTH_REGENERATION_SUMMARY.md  LANGUAGE_COVERAGE_STATUS.md  LICENSE  README.md  debug_Cargo.toml  generate_ground_truths.rs  generate_ground_truths.sh  patterns.toml  test-output.jsonl  test_Cargo.toml  test_parsers.rs  vercel.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
api/: scan.rs
benches/: component_bench.rs  file_size_bench.rs  fixture_generator.rs  large_fixture_bench.rs  memory_bench.rs  scale_bench.rs  scan_bench.rs  scan_large_bench.rs  thread_scaling_bench.rs
crates/cbom-generator/: Cargo.toml
crates/cbom-generator/src/: algorithm_detector.rs  cargo_parser.rs  certificate_parser.rs  dependency_analyzer.rs  dependency_parser.rs  lib.rs  project_parser.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: anchors.rs  ast_ground_truth.rs  filtering.rs  ground_truth.rs  integration.rs  progress_reporting.rs
crates/detector-c/: Cargo.toml
crates/detector-c/src/: lib.rs
crates/detector-cpp/: Cargo.toml
crates/detector-cpp/src/: lib.rs
crates/detector-erlang/: Cargo.toml
crates/detector-erlang/src/: lib.rs
crates/detector-go/: Cargo.toml
crates/detector-go/src/: lib.rs
crates/detector-java/: Cargo.toml
crates/detector-java/src/: lib.rs
crates/detector-kotlin/: Cargo.toml
crates/detector-kotlin/src/: lib.rs
crates/detector-objc/: Cargo.toml
crates/detector-objc/src/: lib.rs
crates/detector-php/: Cargo.toml
crates/detector-php/src/: lib.rs
crates/detector-python/: Cargo.toml
crates/detector-python/src/: lib.rs
crates/detector-rust/: Cargo.toml
crates/detector-rust/src/: lib.rs
crates/detector-swift/: Cargo.toml
crates/detector-swift/src/: lib.rs
crates/scanner-core/: Cargo.toml
crates/scanner-core/benches/: throughput.rs
crates/scanner-core/examples/: basic_usage.rs
crates/scanner-core/src/: ast.rs  lib.rs  output.rs
fixtures/bazel-nested/: WORKSPACE  mv-cbom.json
fixtures/bazel-nested/cpp-module/: BUILD  main.cpp  mv-cbom.json
fixtures/bazel-nested/java-module/: BUILD  JavaCrypto.java  mv-cbom.json
fixtures/bazel-nested/python-module/: BUILD  crypto_utils.py  mv-cbom.json  requirements.txt
fixtures/buck-nested/: .buckconfig  BUCK  mv-cbom.json
fixtures/buck-nested/module1/: BUCK  CryptoUtils.java  mv-cbom.json
fixtures/buck-nested/root/: RootCrypto.java
fixtures/c/libsodium-modern/: Makefile  main.c  mv-cbom.json
fixtures/c/makefile-crypto/: Makefile  main.c  mv-cbom.json
fixtures/c/openssl-mixed/: main.c  mv-cbom.json
fixtures/c/positive/: main.c
fixtures/certificates/x509-rsa-ecdsa/: README.md  ecdsa-cert.pem  ecdsa-key.pem  mv-cbom.json  rsa-cert.pem  rsa-key.pem
fixtures/cpp/botan-modern/: Makefile  main.cpp
fixtures/cpp/cryptopp-legacy/: main.cpp
fixtures/cpp/libsodium_comprehensive/: expected.jsonl
fixtures/cpp/mbedtls_comprehensive/: expected.jsonl
fixtures/cpp/openssl_comprehensive/: expected.jsonl
fixtures/cpp/positive/: main.cpp
fixtures/cpp/tink_aesgcm/: expected.jsonl
fixtures/erlang/positive/: main.erl
fixtures/general/c/: ground_truth.jsonl  main.c
fixtures/general/erlang/: app.erl
fixtures/general/go/: ground_truth.jsonl  main.go
fixtures/general/java/: Main.java  ground_truth.jsonl
fixtures/general/kotlin/: Main.kt
fixtures/general/objc/: App.m
fixtures/general/php/: index.php
fixtures/general/python/: app.py  ground_truth.jsonl
fixtures/general/swift/: main.swift
fixtures/go/crypto_comprehensive/: expected.jsonl
fixtures/go/positive/: main.go
fixtures/go/std_aesgcm/: expected.jsonl
fixtures/go/stdlib-crypto/: go.mod  main.go  mv-cbom.json
fixtures/go/tink_aesgcm/: expected.jsonl
fixtures/go/x-crypto-extended/: go.mod  mv-cbom.json
fixtures/java/bazel-tink/: BUILD  mv-cbom.json
fixtures/java/jca-standard/: mv-cbom.json  pom.xml
fixtures/java/jca_aesgcm/: expected.jsonl
fixtures/java/jca_comprehensive/: expected.jsonl
fixtures/java/maven-bouncycastle/: mv-cbom.json
fixtures/java/positive/: Main.java
fixtures/java/tink_aesgcm/: expected.jsonl
fixtures/javascript/crypto_js/: expected.jsonl
fixtures/javascript/node_crypto/: expected.jsonl
fixtures/javascript/webcrypto/: expected.jsonl
fixtures/kotlin/positive/: Main.kt
fixtures/negative/: no_hits.c
fixtures/objc/commoncrypto_aes/: expected.jsonl
fixtures/objc/commoncrypto_comprehensive/: expected.jsonl
fixtures/objc/positive/: main.m
fixtures/objc/tink_aesgcm/: expected.jsonl
fixtures/objc/tink_comprehensive/: expected.jsonl
fixtures/openssl_c/: actual.jsonl
fixtures/openssl_c/aes_ctr/: expected.jsonl
fixtures/openssl_c/aes_gcm/: expected.jsonl
fixtures/openssl_c/ecdsa_p384/: expected.jsonl
fixtures/openssl_c/rsa_keygen/: expected.jsonl
fixtures/openssl_c/sha256/: expected.jsonl
fixtures/php/openssl_aesgcm/: expected.jsonl
fixtures/php/positive/: main.php
fixtures/python/cryptography-mixed/: main.py  mv-cbom.json  requirements.txt
fixtures/python/positive/: main.py
fixtures/python/pyca_aesgcm/: expected.jsonl
fixtures/python/pyca_comprehensive/: expected.jsonl
fixtures/python/pycryptodome-legacy/: main.py  mv-cbom.json
fixtures/rust/aes-gcm-safe/: mv-cbom.json
src/: lib.rs  main.rs  patterns.rs  scan.rs
static/: README.md  index.html  style.css
test-cases/test-case-1-rsa-uses/: Cargo.toml  mv-cbom.json
test-cases/test-case-3-certificate/: Cargo.toml  cert.pem  key.pem  mv-cbom.json
test-cases/test-case-4-pqc-safe/: Cargo.toml  mv-cbom.json
test-cases/test-case-bazel-java/: WORKSPACE  mv-cbom.json
test-cases/test-case-buck-android/: .buckconfig  BUCK  mv-cbom.json
test-cases/test-case-c-openssl/: Makefile  mv-cbom.json
test-cases/test-case-go-crypto/: main.go
test-cases/test-case-java-maven/: mv-cbom.json  pom.xml
test-cases/test-case-python-crypto/: mv-cbom.json
tests/: integration.rs
www/: app.js  index.html  styles.css
www/data/: django.jsonl  go.jsonl  node.jsonl  results.json
(+314 files in other folders)
