[workspace]
members = [
    "crates/scanner-core",
    "crates/cbom-generator",
    "crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
authors = ["CipherScope Contributors"]
homepage = "https://example.com/cipherscope"
repository = "https://example.com/cipherscope/repo"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
aho-corasick = "1"
once_cell = "1"
rayon = "1"
ignore = "0.4"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
crossbeam-channel = "0.5"
walkdir = "2"
num_cpus = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
x509-parser = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"

