[workspace]
members = [
    "crates/scanner-core",
    "crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
authors = ["CipherScope Contributors"]
homepage = "https://example.com/cipherscope"
repository = "https://example.com/cipherscope/repo"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rayon = "1"
ignore = "0.4"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
crossbeam-channel = "0.5"
num_cpus = "1"

# AST parsing dependencies
tree-sitter = "0.22"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-java = "0.21"
tree-sitter-go = "0.21"
# tree-sitter-php = "0.22"
# tree-sitter-swift = "0.7" 
# tree-sitter-kotlin = "0.3"
# Note: Additional languages disabled due to inconsistent tree-sitter APIs
