[package]
name = "cipherscope"
version = "0.1.0"
edition = "2024"
description = "A high-performance, language-aware tool for scanning source code to detect cryptographic libraries and algorithms usage."
license = "MIT"
repository = "https://github.com/script3r/cipherscope"
readme = "README.md"
keywords = ["crypto", "static-analysis", "security", "inventory", "tree-sitter"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
ahash = { version = "0.8", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
memmap2 = "0.9"
rayon = "1.10"
regex = { version = "1.11", default-features = false, features = ["std", "unicode-perl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
indicatif = "0.17"
tree-sitter = "0.25"
num_cpus = "1.17"
crossbeam-channel = "0.5"
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-swift = { version = "0.7", optional = true }
tree-sitter-php = { version = "0.24", optional = true }
tree-sitter-objc = { version = "3.0", optional = true }
tree-sitter-rust = { version = "0.23", optional = true }

[features]
default = ["lang-c", "lang-cpp", "lang-java", "lang-python", "lang-go", "lang-swift", "lang-php", "lang-objc", "lang-rust"]
lang-c = ["tree-sitter-c"]
lang-cpp = ["tree-sitter-cpp"]
lang-java = ["tree-sitter-java"]
lang-python = ["tree-sitter-python"]
lang-go = ["tree-sitter-go"]
lang-swift = ["tree-sitter-swift"]
lang-php = ["tree-sitter-php"]
lang-objc = ["tree-sitter-objc"]
lang-rust = ["tree-sitter-rust"]

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"
