[package]
name = "cbom-generator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
scanner-core = { path = "../scanner-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
x509-parser = { workspace = true }
der-parser = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
name = "cbom_generator"
path = "src/lib.rs"