[package]
name = "cipherscope"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
indicatif = "0.17"
scanner-core = { path = "../scanner-core" }

[[bin]]
name = "cipherscope"
path = "src/main.rs"

