[package]
name = "scanner-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rayon = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
crossbeam-channel = { workspace = true }
num_cpus = { workspace = true }

# AST parsing dependencies
tree-sitter = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-go = { workspace = true }
# tree-sitter-php = { workspace = true }
# tree-sitter-swift = { workspace = true }
# tree-sitter-kotlin = { workspace = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[lib]
name = "scanner_core"
path = "src/lib.rs"

[[bench]]
name = "throughput"
harness = false

